--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, macos-latest]
+        os: [ubuntu-18.04]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -30,7 +30,7 @@ jobs:
         run: rustup default nightly
       - name: check commit
         if: ${{ runner.os == 'Linux' && github.base_ref != 'master' && github.event_name == 'pull_request' }}
-        run: bash bcos-cmake-scripts/shell/check-commit.sh 3000 "https://api.github.com/repos/FISCO-BCOS/bcos-crypto`"
+        run: bash bcos-cmake-scripts/shell/check-commit.sh 3000 "https://api.github.com/repos/FISCO-BCOS/bcos-crypto"
       - uses: actions/cache@v2
         id: cache
         with:
@@ -49,9 +49,6 @@ jobs:
             ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
             ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
             ccache-clang-v1-notest-${{ runner.temp }}-
-      - name: install macOS dependencies
-        if: runner.os == 'macOS'
-        run: brew install ccache
       - name: install Ubuntu dependencies
         if: runner.os == 'Linux'
         run: sudo apt install -y git curl build-essential clang cmake ccache
@@ -61,7 +58,7 @@ jobs:
       - name: compile
         run: make -j2
       - name: run test
-        run: make test
+        run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
   build_with_gcc:
     name: build_with_gcc
     runs-on: ${{ matrix.os }}
@@ -100,7 +97,47 @@ jobs:
       - name: compile
         run: make -j2
       - name: run test
-        run: make test
+        run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
+  build_with_macos:
+    name: build_with_macos
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 5
+      - name: Nightly default
+        run: rustup default nightly
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: /home/runner/.hunter
+          key: hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+          restore-keys: |
+            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
+            hunter-clang-v1-notest-${{ runner.temp }}-
+      - uses: actions/cache@v2
+        id: ccache
+        with:
+          path: ccache
+          key: ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+          restore-keys: |
+            ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+            ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
+            ccache-clang-v1-notest-${{ runner.temp }}-
+      - name: install macOS dependencies
+        if: runner.os == 'macOS'
+        run: brew install ccache
+      - name: configure
+        run: |
+          CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
+      - name: compile
+        run: make -j2
+      - name: run test
+        run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
   ubuntu16_04_build_with_gcc:
     name: ubuntu16_04_build_with_gcc
     runs-on: ${{ matrix.os }}
@@ -135,11 +172,12 @@ jobs:
         run: sudo apt-get install -y software-properties-common python-software-properties && sudo add-apt-repository ppa:ubuntu-toolchain-r/test && sudo apt-get update && sudo apt install -y git curl build-essential cmake ccache gcc-7 g++-7 lcov&& sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7 && sudo update-alternatives --config gcc
       - name: configure
         run: |
+          export CPATH=/Library/Developer/CommandLineTools/usr/include/c++/v1
           cmake . -DTESTS=ON -DCOVERAGE=ON
       - name: compile
         run: make -j2
       - name: run test
-        run: make test
+        run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
       - name: generate coverage
         run: make coverage
       - name: upload code coverage to Codecov
@@ -186,4 +224,4 @@ jobs:
           mkdir -p build && cd build
           cmake3 .. -DTESTS=ON
           make -j2
-          make test
+          CTEST_OUTPUT_ON_FAILURE=TRUE make test
