--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,7 @@ set(TEST_BINARY_NAME test-bcos-crypto)
 config_test_cases("" "${SOURCES}" bin/${TEST_BINARY_NAME} "")
 
 add_executable(${TEST_BINARY_NAME} ${SOURCES})
-target_include_directories(${TEST_BINARY_NAME} PRIVATE ..)
+target_include_directories(${TEST_BINARY_NAME} PRIVATE .)
 find_package(Boost CONFIG REQUIRED unit_test_framework)
 find_package(bcos-framework)
 target_link_libraries(${TEST_BINARY_NAME} ${BCOS_CRYPTO_TARGET} bcos-framework::utilities Boost::unit_test_framework)
