--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,8 +53,11 @@ jobs:
         if: runner.os == 'Linux'
         run: sudo apt install -y git curl build-essential clang cmake ccache
       - name: configure
-        run: |
-          CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
+        if: runner.os == 'macOS'
+        run: export SDKROOT=$(xcrun --sdk macosx --show-sdk-path) && CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
+      - name: configure
+        if: runner.os == 'Linux'
+        run: CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
       - name: compile
         run: make -j2
       - name: run test
@@ -133,7 +136,7 @@ jobs:
         run: brew install ccache
       - name: configure
         run: |
-          CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
+          export SDKROOT=$(xcrun --sdk macosx --show-sdk-path) && CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
       - name: compile
         run: make -j2
       - name: run test
