--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-18.04, macos-latest]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -31,21 +31,18 @@ jobs:
       - uses: actions/cache@v2
         id: cache
         with:
-          path: /home/runner/.hunter
-          key: hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+          path: |
+            /home/runner/.hunter
+            /Users/runner/.hunter/
+            ccache
+          key: hunter-clang-v2-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
           restore-keys: |
-            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            hunter-clang-v1-notest-${{ runner.temp }}-
-      - uses: actions/cache@v2
-        id: ccache
-        with:
-          path: ccache
-          key: ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            ccache-clang-v1-notest-${{ runner.temp }}-
+            hunter-clang-v2-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+            hunter-clang-v2-notest-${{ runner.temp }}-${{ github.base_ref }}-
+            hunter-clang-v2-notest-${{ runner.temp }}-
+      - name: install macOS dependencies
+        if: runner.os == 'macOS'
+        run: brew install ccache
       - name: install Ubuntu dependencies
         if: runner.os == 'Linux'
         run: sudo apt install -y git curl build-essential clang cmake ccache
@@ -101,46 +98,6 @@ jobs:
         run: make -j2
       - name: run test
         run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
-  build_with_macos:
-    name: build_with_macos
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 5
-      - name: Nightly default
-        run: rustup default nightly
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: /home/runner/.hunter
-          key: hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            hunter-clang-v1-notest-${{ runner.temp }}-
-      - uses: actions/cache@v2
-        id: ccache
-        with:
-          path: ccache
-          key: ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            ccache-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            ccache-clang-v1-notest-${{ runner.temp }}-
-      - name: install macOS dependencies
-        if: runner.os == 'macOS'
-        run: brew install ccache
-      - name: configure
-        run: |
-          export SDKROOT=$(xcrun --sdk macosx --show-sdk-path) && CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
-      - name: compile
-        run: make -j2
-      - name: run test
-        run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
   ubuntu16_04_build_with_gcc:
     name: ubuntu16_04_build_with_gcc
     runs-on: ${{ matrix.os }}
@@ -192,7 +149,10 @@ jobs:
   build_with_centos:
     name: build_with_centos
     runs-on: ubuntu-latest
-    container: docker.io/centos:7
+    container:
+      image: docker.io/centos:7
+      volumes:
+        - /github/home/.hunter:/github/home/.hunter
     steps:
       - uses: actions/checkout@v2
         with:
@@ -201,21 +161,15 @@ jobs:
       - uses: actions/cache@v2
         id: cache
         with:
-          path: /home/runner/.hunter
+          path: |
+            /home/runner/.hunter
+            /github/home/.hunter
+            ccache
           key: hunter-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
           restore-keys: |
             hunter-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
             hunter-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
             hunter-centos-v1-notest-${{ runner.temp }}-
-      - uses: actions/cache@v2
-        id: ccache
-        with:
-          path: ccache
-          key: ccache-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            ccache-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            ccache-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            ccache-centos-v1-notest-${{ runner.temp }}-
       - name: install CentOS dependencies
         run: |
           yum install -y epel-release centos-release-scl
