--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,9 +97,10 @@ include(InstallInclude)
 
 # for doxygen
 include(BuildDocs)
+buildDoc(bcos-crypto-doc)
 
 # for code coverage
 if (COVERAGE)
     include(Coverage)
-    config_coverage("'/usr*' '${CMAKE_CURRENT_SOURCE_DIR}/bcos-cmake-scripts*' '${CMAKE_CURRENT_SOURCE_DIR}/test/bcos-test*'")
+    config_coverage("coverage" "'/usr*' '${CMAKE_CURRENT_SOURCE_DIR}/bcos-cmake-scripts*' '${CMAKE_CURRENT_SOURCE_DIR}/test/bcos-test*'")
 endif ()
