--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,13 +21,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, macos-latest]
+        os: [macos-latest]
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
-      - name: Nightly default
-        run: rustup default nightly
+      - name: install rust language
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2021-06-17
+          override: true
       - uses: actions/cache@v2
         id: cache
         with:
@@ -87,8 +90,11 @@ jobs:
             ccache-ubuntu20-v2-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
             ccache-ubuntu20-v2-notest-${{ runner.temp }}-${{ github.base_ref }}-
             ccache-ubuntu20-v2-notest-${{ runner.temp }}-
-      - name: Nightly default
-        run: rustup default nightly
+      - name: install rust language
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2021-06-17
+          override: true
       - name: install Ubuntu dependencies
         run: sudo apt install -y git curl build-essential cmake ccache
       - name: configure
@@ -98,12 +104,12 @@ jobs:
         run: make -j2
       - name: run test
         run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
-  ubuntu16_04_build_with_gcc:
-    name: ubuntu16_04_build_with_gcc
+  ubuntu18_04_build_with_gcc:
+    name: ubuntu18_04_build_with_gcc
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-16.04]
+        os: [ubuntu-18.04]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -126,14 +132,17 @@ jobs:
             ccache-ubuntu-v2-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
             ccache-ubuntu-v2-notest-${{ runner.temp }}-${{ github.base_ref }}-
             ccache-ubuntu-v2-notest-${{ runner.temp }}-
-      - name: Nightly default
-        run: rustup default nightly
+      - name: install rust language
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2021-06-17
+          override: true
       - name: install Ubuntu dependencies
-        run: sudo apt-get install -y software-properties-common python-software-properties && sudo add-apt-repository ppa:ubuntu-toolchain-r/test && sudo apt-get update && sudo apt install -y git curl build-essential cmake ccache gcc-7 g++-7 lcov&& sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7 && sudo update-alternatives --config gcc
+        run: sudo apt-get install -y git curl build-essential cmake ccache lcov libzstd-dev
       - name: configure
         run: |
           export CPATH=/Library/Developer/CommandLineTools/usr/include/c++/v1
-          cmake . -DTESTS=ON -DCOVERAGE=OFF -DDEMO=ON
+          cmake . -DTESTS=ON -DCOVERAGE=ON -DDEMO=ON
       - name: compile
         run: make -j2
       - name: run test
@@ -157,7 +166,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
-      - uses: dtolnay/rust-toolchain@stable
+      - name: install rust language
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2021-06-17
+          override: true
       - uses: actions/cache@v2
         id: cache
         with:
@@ -173,7 +186,7 @@ jobs:
       - name: install CentOS dependencies
         run: |
           yum install -y epel-release centos-release-scl
-          yum install -y git make gcc gcc-c++ glibc-static glibc-devel cmake3 ccache devtoolset-7 && source /opt/rh/devtoolset-7/enable
+          yum install -y git make gcc gcc-c++ glibc-static glibc-devel cmake3 ccache devtoolset-7 libzstd-devel zlib-devel flex bison python-devel python3-devel && source /opt/rh/devtoolset-7/enable
       - name: configure and compile
         run: |
           rustup override set stable
