--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,13 +51,10 @@ jobs:
         run: sudo apt install -y git curl build-essential clang cmake ccache
       - name: configure
         if: runner.os == 'macOS'
-        run: export SDKROOT=$(xcrun --sdk macosx --show-sdk-path) && CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON -DDEMO=ON
+        run: export SDKROOT=$(xcrun --sdk macosx --show-sdk-path) && CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON -DDEMO=ON -DSM2_OPTIMIZE=ON
       - name: configure
         if: runner.os == 'Linux'
-        run: CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON -DDEMO=ON
-      - name: check commit
-        if: ${{ runner.os == 'Linux' && github.base_ref != 'master' && github.event_name == 'pull_request' }}
-        run: bash bcos-cmake-scripts/shell/check-commit.sh 3000 "https://api.github.com/repos/FISCO-BCOS/bcos-crypto"
+        run: CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON -DDEMO=ON -DSM2_OPTIMIZE=ON
       - name: compile
         run: make -j2
       - name: run test
@@ -99,7 +96,7 @@ jobs:
         run: sudo apt install -y git curl build-essential cmake ccache
       - name: configure
         run: |
-          cmake . -DTESTS=ON -DDEMO=ON
+          cmake . -DTESTS=ON -DDEMO=ON -DSM2_OPTIMIZE=ON
       - name: compile
         run: make -j2
       - name: run test
@@ -142,7 +139,7 @@ jobs:
       - name: configure
         run: |
           export CPATH=/Library/Developer/CommandLineTools/usr/include/c++/v1
-          cmake . -DTESTS=ON -DCOVERAGE=ON -DDEMO=ON
+          cmake . -DTESTS=ON -DCOVERAGE=ON -DDEMO=ON -DSM2_OPTIMIZE=ON
       - name: compile
         run: make -j2
       - name: run test
@@ -193,7 +190,7 @@ jobs:
           cargo --version
           source /opt/rh/devtoolset-7/enable
           mkdir -p build && cd build
-          cmake3 .. -DTESTS=ON
+          cmake3 .. -DTESTS=ON -DSM2_OPTIMIZE=ON
           make -j2
           CTEST_OUTPUT_ON_FAILURE=TRUE make test
   build_with_windows:
