--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,5 +31,5 @@ add_executable(${TEST_BINARY_NAME} ${SOURCES})
 target_include_directories(${TEST_BINARY_NAME} PRIVATE .)
 find_package(Boost CONFIG REQUIRED unit_test_framework)
 target_include_directories(${TEST_BINARY_NAME} PUBLIC ${IPPCRYPTO_INCLUDE_DIRS})
-target_link_libraries(${TEST_BINARY_NAME} ${BCOS_CRYPTO_TARGET} Boost::unit_test_framework OpenSSL::SSL)
+target_link_libraries(${TEST_BINARY_NAME} ${BCOS_CRYPTO_TARGET} Boost::unit_test_framework OpenSSL::SSL ${IPPCRYPTO_LIBRARIES})
 add_test(NAME test-crypto WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COMMAND ${TEST_BINARY_NAME})
