--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,5 +1,4 @@
 find_package(OpenSSL)
-find_package(OpenMP 4.5 REQUIRED)
 
 add_executable(perf_demo perf_demo.cpp ${HEADERS})
 target_include_directories(perf_demo PUBLIC)
@@ -13,5 +12,5 @@ if(ENABLE_IPPCRYPTO)
 
     add_executable(hasher_test hasher_test.cpp ${HEADERS})
     target_include_directories(hasher_test PUBLIC ${IPPCRYPTO_INCLUDE_DIRS})
-    target_link_libraries(hasher_test PUBLIC ${BCOS_CRYPTO_TARGET} OpenSSL::Crypto ${IPPCRYPTO_LIBRARIES} OpenMP::OpenMP_CXX)
+    target_link_libraries(hasher_test PUBLIC ${BCOS_CRYPTO_TARGET} OpenSSL::Crypto ${IPPCRYPTO_LIBRARIES})
 endif()
