Add concept based hasher (#43)
* Add keccak256 support for hasher
* Add unit test
* Add IPPCryptoHasher
* Update std to c++20

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ HunterGate(
 )
 
 project(bcos-crypto VERSION "1.0.0")
-set(VERSION_SUFFIX "-rc2")
+set(VERSION_SUFFIX "")
 
 # basic settings
 include(Options)
@@ -64,7 +64,12 @@ add_library(${BCOS_CRYPTO_TARGET} ${SRC_LIST} ${HEADERS})
 target_link_libraries(${BCOS_CRYPTO_TARGET} PUBLIC ${DependLibraries})
 
 if(DEMO)
-add_subdirectory(demo)
+    add_subdirectory(demo)
+endif()
+
+if(ENABLE_IPPCRYPTO)
+    include(FindIPPCrypto)
+    add_definitions(-DENABLE_IPPCRYPTO)
 endif()
 
 if (TESTS)
