--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,5 +25,6 @@ find_package(OpenSSL)
 add_executable(${TEST_BINARY_NAME} ${SOURCES})
 target_include_directories(${TEST_BINARY_NAME} PRIVATE .)
 find_package(Boost CONFIG REQUIRED unit_test_framework)
+target_include_directories(${TEST_BINARY_NAME} PUBLIC)
 target_link_libraries(${TEST_BINARY_NAME} ${BCOS_CRYPTO_TARGET} Boost::unit_test_framework OpenSSL::SSL)
 add_test(NAME test-crypto WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COMMAND ${TEST_BINARY_NAME})
