--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,7 +48,7 @@ jobs:
         run: brew install ccache llvm
       - name: install Ubuntu dependencies
         if: runner.os == 'Linux'
-        run: sudo apt install -y git curl build-essential clang cmake ccache
+        run: sudo apt install -y git curl build-essential clang cmake ccache libboost1.71-all-dev
       - name: configure
         if: runner.os == 'macOS'
         run: CC=/usr/local/opt/llvm/bin/clang CXX=/usr/local/opt/llvm/bin/clang++ cmake . -DTESTS=ON -DDEMO=ON -DSM2_OPTIMIZE=ON
@@ -93,7 +93,7 @@ jobs:
           toolchain: nightly-2021-06-17
           override: true
       - name: install Ubuntu dependencies
-        run: sudo apt install -y git curl build-essential cmake ccache
+        run: sudo apt install -y git curl build-essential cmake ccache libboost1.71-all-dev
       - name: configure
         run: |
           CC=gcc-10 CXX=g++-10 cmake . -DTESTS=ON -DDEMO=ON -DSM2_OPTIMIZE=ON
