--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -96,7 +96,7 @@ jobs:
         run: sudo apt install -y git curl build-essential cmake ccache libboost1.71-all-dev
       - name: configure
         run: |
-          CC=gcc-10 CXX=g++-10 cmake . -DTESTS=ON -DDEMO=ON -DSM2_OPTIMIZE=ON
+          CC=gcc-10 CXX=g++-10 cmake . -DTESTS=ON -DDEMO=ON -DHUNTER_ENABLED=OFF
       - name: compile
         run: make -j2
       - name: run test
@@ -132,14 +132,14 @@ jobs:
       - name: install CentOS dependencies
         run: |
           yum install -y epel-release centos-release-scl
-          yum install -y git make gcc gcc-c++ glibc-static glibc-devel cmake3 ccache devtoolset-10 libzstd-devel zlib-devel flex bison python-devel python3-devel && source /opt/rh/devtoolset-10/enable
+          yum install -y git make gcc gcc-c++ glibc-static glibc-devel cmake3 ccache devtoolset-10 boost169-static boost169-devel libzstd-devel zlib-devel flex bison python-devel python3-devel && source /opt/rh/devtoolset-10/enable
       - name: configure and compile
         run: |
           rustup override set stable
           cargo --version
           source /opt/rh/devtoolset-10/enable
           mkdir -p build && cd build
-          cmake3 .. -DTESTS=ON -DSM2_OPTIMIZE=ON
+          cmake3 .. -DTESTS=ON -DSM2_OPTIMIZE=ON -DHUNTER_ENABLED=OFF
           make -j2
           CTEST_OUTPUT_ON_FAILURE=TRUE make test
   build_with_windows:
