--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,11 +20,11 @@ file(GLOB_RECURSE SOURCES "*.cpp" "*.h" "*.sol")
 # cmake settings
 set(TEST_BINARY_NAME test-bcos-crypto)
 
-find_package(OpenSSL 1.1.1 REQUIRED)
+find_package(OpenSSL 1.1.1 REQUIRED COMPONENTS Crypto)
+find_package(Boost 1.69.0 REQUIRED COMPONENTS unit_test_framework)
 
 add_executable(${TEST_BINARY_NAME} ${SOURCES})
 target_include_directories(${TEST_BINARY_NAME} PRIVATE .)
-find_package(Boost 1.69.0 REQUIRED COMPONENTS unit_test_framework)
 target_include_directories(${TEST_BINARY_NAME} PUBLIC)
-target_link_libraries(${TEST_BINARY_NAME} ${BCOS_CRYPTO_TARGET} Boost::unit_test_framework OpenSSL::SSL)
+target_link_libraries(${TEST_BINARY_NAME} ${BCOS_CRYPTO_TARGET} Boost::unit_test_framework OpenSSL::Crypto)
 add_test(NAME test-crypto WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COMMAND ${TEST_BINARY_NAME})
