Fix ubuntu link seq error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,17 +49,15 @@ include(CompilerSettings)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
+SET(Boost_USE_STATIC_LIBS ON)
 include(InstallDep)
 
 # add source directory
 include(Sources)
 
-SET(Boost_USE_STATIC_LIBS ON)
-find_package(Boost 1.69.0 REQUIRED COMPONENTS log chrono system filesystem iostreams thread program_options unit_test_framework)
-
 set(BCOS_CRYPTO_TARGET bcos-crypto)
 add_library(${BCOS_CRYPTO_TARGET} ${SRC_LIST} ${HEADERS})
-target_link_libraries(${BCOS_CRYPTO_TARGET} PUBLIC ${DependLibraries} Boost::log)
+target_link_libraries(${BCOS_CRYPTO_TARGET} PUBLIC ${DependLibraries})
 
 if(DEMO)
     add_subdirectory(demo)
