--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,5 +27,5 @@ find_package(ZLIB 1.2.7 REQUIRED)
 add_executable(${TEST_BINARY_NAME} ${SOURCES})
 target_include_directories(${TEST_BINARY_NAME} PRIVATE .)
 target_include_directories(${TEST_BINARY_NAME} PUBLIC)
-target_link_libraries(${TEST_BINARY_NAME} Boost::log Boost::unit_test_framework ${BCOS_CRYPTO_TARGET} OpenSSL::Crypto z)
+target_link_libraries(${TEST_BINARY_NAME} Boost::log Boost::unit_test_framework ${BCOS_CRYPTO_TARGET} OpenSSL::Crypto ZLIB::ZLIB)
 add_test(NAME test-crypto WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COMMAND ${TEST_BINARY_NAME})
